--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,37 @@
 {
-	"appTitle": "Medical File"
-	"welcomeText": "Welcome to the Medical File"
+	"appTitle": "Medical File",
+	"welcomeText": "Welcome to the Medical File",
+	"busquePorCPF": "Search By CPF",
+	"buscar": "Search",
+	"preenchaCampoCPF": "Input CPF in this field.",
+	"entreNaConta": "Login into your account",
+	"invalidoCPF": "invalid CPF!",
+	"senha": "Password",
+	"senhaObrigatoria": "Password Required.",
+	"senhaMaisQue6": "Password must be longer than 6 characters.",
+	"entrar": "Login",
+	"naoCadastrado": "Not Registered? Sign-up here!",
+	"esteCampoObrigatorio": "Required Field",
+	"digiteAs": "Type the ",
+	"queEstiverUsando": " that you are using and press the \",
+	"paraAdiconarLista": " to add it to the list.",
+	"escolhaFoto": "Choose a Photo",
+	"nomeCompleto": "Full Name",
+	"nome": "Name",
+	"email": "E-mail",
+	"dataNascimento": "Date of Birth",
+	"confirmarSenha": "Confirm Password",
+	"senhaEConfirmaNaoIgual": "Passwords do not match",
+	"medicacoes": "Medication",
+	"vacinas": "Vaccines",
+	"doencas": "Diseases",
+	"cadastrar": "Register",
+	"camera": "Camera",
+	"galeria": "Gallery",
+	"editar": "Edit",
+	"sairConta": "Logout",
+	"salvar": "Salve",
+	"voltar": "Return",
+	"nenhumUsuarioCPF": "No user with this CPF ",
+	"erroBuscaUsuario": "An Error occurred while looking for the user",
 }
