--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,4 +1,38 @@
 {
-	"appTitle": "Carteira Médica"
-	"welcomeText": "Bem-vindo a carteira Médica"
+	"appTitle": "Carteira Médica",
+	"welcomeText": "Bem-vindo a carteira Médica",
+	"busquePorCPF": "Search By CPF",
+	"buscar": "Buscar",
+	"preenchaCampoCPF": "Preencha o campo com o CPF.",
+    "entreNaConta": "Entre na sua conta",
+	"invalidoCPF": "CPF inválido!",
+	"senha": "Senha",
+	"senhaObrigatoria": "Senha Obrigatória.",
+	"senhaMaisQue6": "Senha deve ser maior que 6 caracteres.",
+	"entrar": "Entrar",
+	"naoCadastrado": "Não é cadastrado? Regitre-se aqui!",
+	"esteCampoObrigatorio": "Este campo é obrigatório.",
+	"digiteAs": "Digite as ",
+	"queEstiverUsando": " que você estiver tomando e clique no \",
+	"paraAdiconarLista": " para adiciona-lo a lista.",
+	"escolhaFoto": "Escolha a Foto",
+	"nomeCompleto": "Nome Completo",
+	"nome": "Nome",
+	"email": "E-mail",
+	"dataNascimento": "Data de Nascimento",
+	"confirmarSenha": "Confirmar Senha",
+	"senhaEConfirmaNaoIgual": "A senha e a confirmação não são iguais.",
+	"medicacoes": "Medicações",
+	"vacinas": "Vacinas",
+	"doencas": "Doenças",
+	"cadastrar": "Cadastrar",
+	"camera": "Câmera",
+	"galeria": "Galeria",
+	"editar": "Editar",
+	"sairConta": "Sair da Conta",
+	"salvar": "Salvar",
+	"voltar": "Voltar",
+	"nenhumUsuarioCPF": "Nenhum usuário com o CPF ",
+	"erroBuscaUsuario": "Erro ao buscar o usuário",
+	
 }
