--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -13,7 +13,7 @@
 	"naoCadastrado": "Não é cadastrado? Regitre-se aqui!",
 	"esteCampoObrigatorio": "Este campo é obrigatório.",
 	"digiteAs": "Digite as ",
-	"queEstiverUsando": " que você estiver tomando e clique no \",
+	"queEstiverUsando": " que você estiver tomando e clique no ",
 	"paraAdiconarLista": " para adiciona-lo a lista.",
 	"escolhaFoto": "Escolha a Foto",
 	"nomeCompleto": "Nome Completo",
@@ -33,6 +33,5 @@
 	"salvar": "Salvar",
 	"voltar": "Voltar",
 	"nenhumUsuarioCPF": "Nenhum usuário com o CPF ",
-	"erroBuscaUsuario": "Erro ao buscar o usuário",
-	
+	"erroBuscaUsuario": "Erro ao buscar o usuário"
 }
